--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://example.com"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="cache-control" content="public, max-age=3600" />
     <meta
       name="description"
       content="Web site created using create-react-app"
